<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pacjent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiek"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_nieznana"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/switchTextColor"
        />

</LinearLayout>
