<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true">

    <!-- Guideline dla bezpiecznego marginesu od góry (poniżej paska stanu) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <TextView
        android:id="@+id/textHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/skanuj"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonLoadPdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wgraj_pdf"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/chartImageView"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:visibility="gone"
        android:scaleType="fitEnd"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/wykres_diagnostyczny"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/chartImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:singleLine="false"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>